# synergy-extra

./: .env.example  CMakeLists.txt  README.md  cspell.json
cmake/: Extra.cmake  SaveVersion.cmake  Version.cmake
src/: CMakeLists.txt
src/lib/synergy/gui/: ActivationDialog.cpp  ActivationDialog.h  ActivationDialog.ui  CancelActivationDialog.ui  ExtraSettings.cpp  ExtraSettings.h  FeatureHandler.cpp  FeatureHandler.h  constants.h
src/lib/synergy/gui/license/: LicenseActivator.cpp  LicenseActivator.h  LicenseApiClient.cpp  LicenseApiClient.h  LicenseHandler.cpp  LicenseHandler.h  LicenseSettings.cpp  LicenseSettings.h  license_notices.cpp  license_notices.h
src/lib/synergy/hooks/: gui_hook.h  gui_hook_config.h.in
src/lib/synergy/license/: SerialKey.h  parse_serial_key.cpp
